# maevis

./: .env  README.md
json/: open_ai_models.json  open_ai_models_infos.json  response_from_chat.json
maevis/: Cargo.toml
maevis/src/: RequestDataParams.md  http_request.rs  lib.rs  request_builder.rs  ui.rs
maevis_bin/: Cargo.toml
maevis_bin/src/: main.rs
