[package]
name = "maevis_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maevis = { path = "../maevis" }
console = "0.15.5"
dotenv = "0.15.0"
indicatif = "0.17.3"
log = "0.4.17"
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
simple_logger = "4.1.0"
tokio = { version = "1.26.0", features = ["full"] }
